--- a/a13/src/Makefile
+++ b/a13/src/Makefile
@@ -8,17 +8,20 @@ else
 	CFLAGS += -O2
 endif
 
-DEPS = nbayes.o
+DEPS = nbayes.o aodc.o
 
 all: run
 
 run: main.o $(DEPS)
 	g++ $^ -o $@ $(LIBS)
 
-main.o: main.cc nbayes.h
+main.o: main.cc nbayes.h aodc.h
 	g++ -c $(CFLAGS) $^
 
 nbayes.o: nbayes.cc nbayes.h
+	g++ -c $(CFLAGS) $^
+
+aodc.o: aodc.cc aodc.h
 	g++ -c $(CFLAGS) $^
 
 .PHONY: clean clean_output
